Hide scrollbar and fix badges

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,17 @@ body {
   color: white;
   font-family: 'Poppins';
   scroll-behavior: smooth;
+  overflow: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  background: transparent;
 }
 
 .about-section {
